--- a/package.json
+++ b/package.json
@@ -3,26 +3,41 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "coverage": "vitest run --coverage",
+    "dev": "vite",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^14.1.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/ui": "^0.9.4",
     "autoprefixer": "^10.4.4",
     "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
+    "jsdom": "^19.0.0",
+    "msw": "^0.39.2",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vitest": "^0.9.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
