--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-  "name": "react-easy-infinite-scroll",
-  "private": true,
+  "name": "use-infinite-scroll",
   "version": "0.0.0",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/use-infinite-scroll.umd.cjs",
+  "module": "./dist/use-infinite-scroll.js",
+  "types": "./dist/main.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/use-infinite-scroll.js",
+      "require": "./dist/use-infinite-scroll.umd.cjs"
+    }
+  },
   "scripts": {
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
@@ -18,6 +30,7 @@
     "@testing-library/dom": "^9.2.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.16.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -35,6 +48,7 @@
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
     "vite": "^4.2.2",
+    "vite-plugin-dts": "^2.3.0",
     "vitest": "^0.30.1"
   },
   "msw": {
